<resources>
    <string name="app_name">PizzaShop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome To Pizza Shop</string>
    <string name="welcome_text_2">The Best Pizza in Town</string>
    <string name="try_now">Try Now</string>
    <string name="fragment_select_or_create_pizza">Create or Select Pizza </string>
    <string name="margherita">Margherita</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="margherita_1">Margherita</string>
    <string name="cheese_pizza">Cheese Pizza</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="submarine">Submarine Pizza</string>
    <string name="createPizza">Create Pizza</string>
    <string name="create_your_own_pizza">Create Your Own Pizza</string>
    <string name="give_your_pizza_name">Give Your Pizza Name</string>
    <string name="create_pizza">Create Pizza</string>
</resources>